--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
     <head>
-        <title>Hello World</title>
+        <title>Hi.</title>
         <style>
 
         html, body {
@@ -24,8 +24,8 @@
     </head>
     <body>
     <div class="my-block">
-       WORD1<br />
-       WORDWORDWORDWORD2
+       <br />
+       Hier gibt's (noch) nix zu suchen.
     </div>
     </body>
 </html>
