--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
     </head>
     <body>
     <div class="my-block">
-       <br />
-       Hier gibt's (noch) nix zu suchen.
-    </div>
+       Hier gibt's noch nicht viel zu suchen.
+        <br />
+       Außer sich den <a href="https://www.icloud.com/iclouddrive/0EkSiyIl3ygMx4ftsY7FrWNZQ#ZWANGLOSE_HOCHZEIT">Blocker als Kalendereintrag</a> herunterzuladen. 
+        <br /><br />
+        Liebst,
+        <br />
+        Maren & Eugen
+       </div>
     </body>
 </html>
